# onepage

./: .gitignore  README.md  complete_references.html  example.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  docs.yml
docs/: api.rst  conf.py  index.rst
examples/: onepage.yaml  simple_merge.py  verify_structure.py  wikifuse.yaml
examples/Q27182/: diff.html
onepage/: __init__.py  api.py  cli.py  config.py  diff.py  llm.py  merge.py  models.py  parse.py  render.py  translate.py
onepage/api/: __init__.py  fetcher.py  wikidata.py  wikipedia.py
onepage/cli/: __init__.py  main.py
onepage/core/: __init__.py  config.py  models.py
onepage/processing/: __init__.py  alignment.py  builder.py  content_classifier.py  content_merger.py  references.py  text.py  translation.py
onepage/processing/mergers/: __init__.py  fact_merger.py  media_merger.py  reference_merger.py  text_merger.py
onepage/renderers/: __init__.py  attribution.py  html.py  wikitext.py
scripts/: verify_structure.py
tests/: __init__.py  test_api.py  test_cli.py  test_diff.py  test_language_selection.py  test_llm.py  test_merge.py  test_models.py  test_parse.py  test_render.py  test_text_cleaner.py  test_translate.py
tmp/: claims.json  en.json  entity.json  fetch_metadata.json  fr.json
wikifuse/: __init__.py  api.py  cli.py  config.py  merge.py  models.py  parse.py  render.py  translate.py
